--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body ng-app="LoanCalculator" ng-controller="MainCtrl">
+<body ng-app="LoanCalc" ng-controller="MainCtrl">
   <div class="container">
     <h2>Free Loan Calculator!!</h2>
     <div class="callout">
